--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AppSettings": {
+    "BaseUrl": "http://localhost:3000/api"
   }
 }
