--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,7 +6,7 @@
     }
   }, 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MetabolonDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=192.168.2.100,1433;Database=MetabolonDB;User Id=DevMan;Password=DevMan;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
