--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -8,6 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=192.168.2.100,1433;Database=MetabolonDB;User Id=DevMan;Password=DevMan;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "vNzwuxNmN9HShP8Cpho1KW7lvMwOr0RYZbCMDesSwnA=",
+    "Issuer": "metabolonAPI",
+    "Audience": "metabolonAPIUsers",
+    "ExpiryMinutes": 30
+  }
 }
 
