--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -13,7 +13,8 @@
     "SecretKey": "vNzwuxNmN9HShP8Cpho1KW7lvMwOr0RYZbCMDesSwnA=",
     "Issuer": "metabolonAPI",
     "Audience": "metabolonAPIUsers",
-    "ExpiryMinutes": 30
+    "ExpiryMinutes": 30,
+    "ExpiryRefreshDays": 30
   }
 }
 
