Email Service Initial

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -7,5 +7,21 @@
   },
   "AppSettings": {
     "BaseUrl": "0.0.0.0:3000/api"
+  },
+  "SmtpSettings": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": "2525",
+    "Username": "774d12265d9f58",
+    "Password": "5db0a8f5be6704",
+    "FromName": "Metabolon",
+    "FromEmail": "noreply@metabolon.de"
+  },
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "vNzwuxNmN9HShP8Cpho1KW7lvMwOr0RYZbCMDesSwnA=",
+    "Issuer": "metabolonAPI",
+    "Audience": "metabolonAPIUsers",
+    "ExpiryMinutes": 30,
+    "ExpiryRefreshDays": 30
   }
 }
