--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -8,6 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=192.168.2.100,1433;Database=MetabolonDB;User Id=DevMan;Password=DevMan;TrustServerCertificate=True;"
   },
+  "AppSettings": {
+    "BaseUrl": "0.0.0.0:3000/api"
+  },
   "AllowedHosts": "*",
   "JwtSettings": {
     "SecretKey": "vNzwuxNmN9HShP8Cpho1KW7lvMwOr0RYZbCMDesSwnA=",
@@ -15,6 +18,14 @@
     "Audience": "metabolonAPIUsers",
     "ExpiryMinutes": 30,
     "ExpiryRefreshDays": 30
+  },
+  "EmailSettings": {
+    "SmtpHost": "sandbox.smtp.mailtrap.io",
+    "SmptPort": "2525",
+    "Username": "774d12265d9f58",
+    "Password": "5db0a8f5be6704",
+    "FromName": "Metabolon",
+    "FromEmail": "noreply@metabolon.de"
   }
 }
 
