Document saving and FileSystem

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "AppSettings": {
-    "BaseUrl": "0.0.0.0:3000/api"
+    "BaseUrl": "0.0.0.0:3000/api",
+    "BaseFilePath": "../files"
   },
   "SmtpSettings": {
     "Host": "sandbox.smtp.mailtrap.io",
