--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -9,7 +9,8 @@
     "DefaultConnection": "Server=192.168.2.100,1433;Database=MetabolonDB;User Id=DevMan;Password=DevMan;TrustServerCertificate=True;"
   },
   "AppSettings": {
-    "BaseUrl": "0.0.0.0:3000/api"
+    "BaseUrl": "0.0.0.0:3000/api",
+    "BaseFilePath": "../files"
   },
   "AllowedHosts": "*",
   "JwtSettings": {
