--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.178.66,1433;Database=MetabolonDB;User Id=DevMan;Password=DevMan;TrustServerCertificate=True;"
+  },
   "AppSettings": {
     "BaseUrl": "0.0.0.0:3000/api",
     "BaseFilePath": "../files"
